var/lib/istio/envoy/istiod_envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 14000

static_resources:
  clusters:
  - name: in.15010
    http2_protocol_options: {}
    connect_timeout: 1.000s

    hosts:
    # TODO: use EDS for load balancing across pilots.
    - socket_address:
        address: 127.0.0.1
        port_value: 15010

    circuit_breakers:
      thresholds:
      - max_connections: 100000
        max_pending_requests: 100000
        max_requests: 100000
        max_retries: 3


  listeners:
  - name: "in.15011"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15011
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        #typed_config
        #"@type": "type.googleapis.com/",
        config:
          codec_type: HTTP2
          stat_prefix: "15011"
          http2_protocol_options:
            max_concurrent_streams: 1073741824

          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout

          http_filters:
          - name: envoy.router

          route_config:
            name: "15011"

            virtual_hosts:
            - name: istio-pilot

              domains:
              - '*'

              routes:
              - match:
                  prefix: /
                route:
                  cluster: in.15010
                  timeout: 0.000s
                decorator:
                  operation: xDS

      tls_context:
        # Clients authenticate using JWT
        require_client_certificate: false
        common_tls_context:
          #validation_context:
          #  trusted_ca:
          #    filename: ./var/run/secrets/istio-dns/root-cert.pem

          alpn_protocols:
          - h2

          tls_certificates:
          - certificate_chain:
              filename: ./var/run/secrets/istio-dns/cert-chain.pem
            private_key:
              filename: ./var/run/secrets/istio-dns/key.pem
